--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm mx-auto mt-16 bg-tan font-display shadow border cursor-default window">
+<div class="max-w-lg mx-auto mt-32 bg-tan font-display shadow border cursor-default window">
     <header class="text-center py-1 flex items-center select-none">
         <div class="w-24"></div>
         <div class="lines w-full">
@@ -20,8 +20,3 @@
     </header>
     <section class="border-t-2 py-8"></section>
 </div>
-
-<button class="shortcut absolute bottom-16 left-16">
-    <img src="/assets/system-icons/minesweeper.png" alt="" class="mx-auto mb-2" />
-    <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">surpise</span>
-</button>
