--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm mx-auto mt-32 bg-tan font-display shadow border cursor-default window">
+<div class="max-w-sm mx-auto bg-tan font-display shadow border cursor-default window relative top-32">
     <header class="text-center py-1 flex items-center select-none">
         <div class="w-24"></div>
         <div class="lines w-full">
@@ -22,8 +22,8 @@
         <h2 class="uppercase text-center text-xs">Change Background</h2>
         <div class="grid grid-flow-row grid-cols-4 gap-3 mt-4">
             {{ assets container="assets" folder="system-wallpapers" }}
-                <button>
-                    <img src="{{ url }}" alt="{{ filename }}" class="w-full">
+                <button @click="setWallpaper('{{ url }}')">
+                    <img src="{{ glide:url height="64" width="64" }}" alt="{{ filename }}" class="w-full">
                 </button>
             {{ /assets }}
         </div>
