--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -32,7 +32,7 @@
 
                 <button class="shortcut absolute bottom-16 left-16">
                     <img src="/assets/system-icons/minesweeper.png" alt="" class="mx-auto mb-2" />
-                    <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">surpise</span>
+                    <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">surprise</span>
                 </button>
             </div>
         </div>
