--- a/resources/views/partials/menu-bar.antlers.html
+++ b/resources/views/partials/menu-bar.antlers.html
@@ -6,8 +6,7 @@
         </a>
         <a href="" class="py-1 px-2 hover:bg-black hover:text-white">File</a>
         <a href="" class="py-1 px-2 hover:bg-black hover:text-white">Edit</a>
-        <a href="" class="py-1 px-2 hover:bg-black hover:text-white">View</a>
-        <a href="" class="py-1 px-2 hover:bg-black hover:text-white">Settings</a>
+        <button @click="showSettings" class="py-1 px-2 hover:bg-black hover:text-white outline-none">Settings</button>
     </div>
     <a href="" class="py-1 px-2 hover:bg-black hover:text-white">
         9:21 PM
