--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -41,7 +41,7 @@
                         <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">freebiez</span>
                     </button>
                 </div>
-                <button class="shortcut absolute bottom-16 left-16">
+                <button class="shortcut absolute bottom-16 left-16" @dblclick="generateSurprise">
                     <img src="/assets/system-icons/minesweeper.png" alt="" class="mx-auto mb-2" />
                     <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">surprise</span>
                 </button>
