--- a/resources/views/partials/menu-bar.antlers.html
+++ b/resources/views/partials/menu-bar.antlers.html
@@ -8,7 +8,5 @@
         <a href="" class="py-1 px-2 hover:bg-black hover:text-white">Edit</a>
         <button @click="showSettings" class="py-1 px-2 hover:bg-black hover:text-white outline-none">Settings</button>
     </div>
-    <a href="" class="py-1 px-2 hover:bg-black hover:text-white">
-        9:21 PM
-    </a>
+    <div class="py-1 px-2 hover:bg-black hover:text-white" v-text="time" v-cloak></div>
 </nav>
