--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ title ?? site:name }}</title>
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
-        {{# <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script> #}}
-        {{# <script src="https://cdn.jsdelivr.net/npm/@ryangjchandler/spruce@2.x.x/dist/spruce.umd.js"></script> #}}
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.png" sizes="32x32"/>
     </head>
     <body class="text-black border-black font-display text-base antialiased">
         <div id="app">
