--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -32,11 +32,11 @@
                         <img src="/assets/system-icons/computer.png" alt="" class="mx-auto mb-2" />
                         <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">comp.fun</span>
                     </button>
-                    <button class="shortcut" @dblclick="goTo('/404-4-fun')">
+                    <button class="shortcut" @dblclick="goTo('https://lilpics.sortarad.io')">
                         <img src="/assets/system-icons/error.png" alt="" class="mx-auto mb-2" />
-                        <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">404 4 FUN</span>
+                        <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">lil pics</span>
                     </button>
-                    <button class="shortcut">
+                    <button class="shortcut" @dblclick="goTo('/freebiez')">
                         <img src="/assets/system-icons/folder.png" alt="" class="mx-auto mb-2" />
                         <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">freebiez</span>
                     </button>
