--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -15,6 +15,10 @@
     font-style: normal;
 }
 
+body {
+    background: url('/assets/system-wallpapers/leather-teal.png');
+}
+
 .shortcut {
     @apply text-center inline-block group p-1 relative select-none cursor-pointer;
     touch-action: none;
