--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -15,7 +15,7 @@
 
                  {{ template_content }}
 
-                <desktop-window title="Settings" class="max-w-sm top-16 ml-0 left-16 z-20" v-on:close="showingSettings = false" v-show="showingSettings">
+                <desktop-window title="Settings" class="max-w-sm top-16 ml-0 left-16 z-20" v-on:close="showingSettings = false" v-show="showingSettings" v-cloak>
                     <h2 class="uppercase text-center text-xs">Change Background</h2>
                     <div class="grid grid-flow-row grid-cols-4 gap-3 mt-4">
                         {{ assets container="assets" folder="system-wallpapers" }}
