--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
         <link rel="shortcut icon" type="image/png" href="/img/favicon.png" sizes="32x32"/>
         {{ seo_pro:meta }}
+        <script src="https://cdn.usefathom.com/script.js" data-site="TNJISWGI" defer></script>
     </head>
     <body class="text-black border-black font-display text-base antialiased">
         <div id="app">
