--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,7 +1,7 @@
 <desktop-window title="{{ title }}.txt" class="max-w-xl top-24" :dismissable="false">
     <div class="content" v-pre>
         {{ content }}
-            <div>{{ text }}</div>
+            <div class="prose">{{ text }}</div>
         {{ /content }}
     </div>
 </desktop-window>
