--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -3015,6 +3015,7 @@ body {
     font-family: torrance, sans-serif;
     font-size: 1.125rem;
     line-height: 1.75rem;
+    margin-bottom: 2rem;
   }
 
 [v-cloak] {
