Add Ducktales Remix
Add Ducktales Remix

--- a/resources/views/blog/show.antlers.html
+++ b/resources/views/blog/show.antlers.html
@@ -4,6 +4,7 @@
             <h2 class="mb-2">{{ title }}</h2>
             <div class="font-body text-xs font-bold uppercase text-black">{{ date format="Y_M_d"}}</div>
         </header>
+        <p>{{ embed }}</p>
         {{ content }}
     </article>
 </desktop-window>
