--- a/resources/views/blog/show.antlers.html
+++ b/resources/views/blog/show.antlers.html
@@ -1,10 +1,12 @@
-<desktop-window title="{{ title }}.txt" class="max-w-2xl top-24" :dismissable="false">
+<desktop-window title="{{ title }}.txt" class="max-w-2xl max-h-96 overflow-scroll top-24" :dismissable="false">
     <article class="content">
         <header class="mb-8">
             <h2 class="mb-2">{{ title }}</h2>
             <div class="font-body text-xs font-bold uppercase text-black">{{ date format="Y_M_d"}}</div>
         </header>
+        {{ if embed ==! "" }}
         <p>{{ embed }}</p>
+        {{ /if }}
         {{ content }}
     </article>
 </desktop-window>
