--- a/resources/views/blog/index.antlers.html
+++ b/resources/views/blog/index.antlers.html
@@ -1,4 +1,4 @@
-<desktop-window title="{{ title }}" class="max-w-2xl max-h-2xl overflow-scroll top-24" :dismissable="false">
+<desktop-window title="{{ title }}" class="max-w-2xl max-h-2xl overflow-x-scroll top-24" :dismissable="false">
     {{ collection:blog }}
         <a href="{{ url }}" class="text-2xl text-blue hover:text-black group p-2 flex items-center even:bg-tan-darker">
             <span class="flex-1 group-hover:underline">{{ title }}</span>
