--- a/resources/views/blog/show.antlers.html
+++ b/resources/views/blog/show.antlers.html
@@ -1,4 +1,4 @@
-<desktop-window title="{{ title }}.txt" class="max-w-2xl max-h-96 overflow-scroll top-24" :dismissable="false">
+<desktop-window title="{{ title }}.txt" class="max-w-2xl max-h-96 overflow-x-scroll top-24" :dismissable="false">
     <article class="content">
         <header class="mb-8">
             <h2 class="mb-2">{{ title }}</h2>
