--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -31,22 +31,22 @@
                 <div class="absolute top-16 right-8 flex flex-col space-y-8">
                     <button class="shortcut" @dblclick="goTo('/comp-fun')">
                         <img src="/assets/system-icons/computer.png" alt="" class="mx-auto mb-2" />
-                        <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">comp.fun</span>
+                        <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">comp.fun</span>
                     </button>
                     <button class="shortcut" @dblclick="goTo('https://lilpics.sortarad.io')">
                         <img src="/assets/system-icons/error.png" alt="" class="mx-auto mb-2" />
-                        <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">lil pics</span>
+                        <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">lil pics</span>
                     </button>
                     <button class="shortcut" @dblclick="goTo('/freebiez')">
                         <img src="/assets/system-icons/folder.png" alt="" class="mx-auto mb-2" />
-                        <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">freebiez</span>
+                        <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">freebiez</span>
                     </button>
                 </div>
 
                 {{# Surprise Button #}}
                 <button class="shortcut absolute bottom-16 left-16" @dblclick="showSurprise">
                     <img src="/assets/system-icons/minesweeper.png" alt="" class="mx-auto mb-2" />
-                    <span class="bg-tan group-focus:bg-blue group-focus:text-white px-1">surprise</span>
+                    <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">surprise</span>
                 </button>
                 <desktop-window title="Surprise!!!" class="top-24 right-12 z-20" v-on:close="showingSurprise = false" v-if="showingSurprise" style="width: 832px">
                     {{ settings:surprises sort="random" limit="1" }}
