Try to fix the flash

--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,4 @@
-<desktop-window title="{{ title }}.txt" class="max-w-xl top-24" :dismissable="false">
+<desktop-window title="{{ title }}.txt" class="max-w-xl top-24" :dismissable="false" v-cloak>
     <div class="content" v-pre>
         {{ content }}
             <div>{{ text }}</div>
