--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -37,9 +37,9 @@
                         <img src="/assets/system-icons/error.png" alt="" class="mx-auto mb-2" />
                         <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">lil pics</span>
                     </button>
-                    <button class="shortcut" @click="goTo('/freebiez')">
+                    <button class="shortcut" @click="goTo('https://8bit.pics/')">
                         <img src="/assets/system-icons/folder.png" alt="" class="mx-auto mb-2" />
-                        <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">freebiez</span>
+                        <span class="bg-tan group-focus:bg-blue group-focus:text-black px-1">8 bit pics</span>
                     </button>
                 </div>
 
